# thesis

./: .gitignore  CMakeLists.txt  devenv.nix
data/: dead1hr.fuel  liveH.fuel  modified.fuel  modifiedY.fuel  paused.csv
include/: BD.cu  BD.h  Ember.h  FireSim.cpp  FireSim.h  FuelModel.h  FuelMoisture.h  IMT.cu  IMT.h  MT.cu  MT.h  SEQ.cpp  SEQ.h  kernel_BD.cu  kernel_BD.h  kernel_IMT.cu  kernel_IMT.h  kernel_MT.cu  kernel_MT.h  kernel_common.cu  kernel_common.h  propagation.cu  propagation.h
src/: Referee(s)' Comments to Author_  simulation.cu
